...
        Padding(
          padding: EdgeInsets.only(
            top: mediaQuerySize.width * 0.1,
            bottom: mediaQuerySize.width * 0.2,
          ),
          child: Container(
            key: Key('wizardFormOneText'),
            alignment: Alignment.center,
            child: Text(
              LocaleKeys.settings_select_location.tr(),
              style: TextStyle(
                fontWeight: FontWeight.bold,
                fontSize: 24.0,
...
                ),
                suggestionsCallback: (pattern) {
                  return dataService.getMunicipalRegions(pattern);
                },
                itemBuilder: (context, region) {
                  return PlatformListTile(
                    key: Key('WizardLocationTextFieldSuggestionTile'),
                    title: Text(region.name),
                  );
                },
                validator: (value) {
                  if (!useLocation() && value!.length < 3) {
                    return LocaleKeys.settings_enter_location_minimum_characters
...
                  });
                },
              ),
              Padding(
                padding: EdgeInsets.only(top: mediaQuerySize.height * 0.03),
                child: PlatformIconButton(
                  key: Key('wizardUseLocationButton'),
                  cupertino: (context, platform) => CupertinoIconButtonData(
                    padding: EdgeInsets.zero,
                    color: useLocation() ? Colors.blue : Colors.white,
                  ),
                  material: (context, platform) => MaterialIconButtonData(
                    padding: EdgeInsets.zero,
...
                  icon: Row(
                    mainAxisAlignment: MainAxisAlignment.center,
                    children: [
                      useLocation()
                          ? Icon(
                              PlatformIcons(context).locationSolid,
                              key: Key('wizardUseLocationIconSolid'),
                              color: Colors.white,
                            )
                          : Icon(
                              PlatformIcons(context).location,
                              key: Key('wizardUseLocationIcon'),
                              color: Colors.black,
...
                if (snapshot.hasData) {
                  final arsEntries = snapshot.data!.regionHierarchy;
                  final regionLevels = arsEntries.map((e) => e.type).toList();
                  final arsMap = HashMap.fromEntries(
                      arsEntries.map((e) => MapEntry(e.type, e)));
                  return MultiSelectFormField<RegionLevel>(
                    key: Key('RegionHierarchyMultiSelect'),
                    elements: regionLevels,
                    elementName: (regionLevel) =>
                        "${arsMap[regionLevel]!.name} (${regionLevelName(regionLevel)})",
                    initialValue: regionLevels.toSet(),
                    autovalidateMode: AutovalidateMode.always,
                    validator: (selectedRegionLevels) {
...
          child: Column(
            children: [
              AppBar(
                centerTitle: true,
                title: Image.asset(
                  'assets/images/dealog_logo.png',
                  key: Key('DEalogLogoKey'),
                  fit: BoxFit.cover,
                  height: MediaQuery.of(context).size.height * 0.07,
                ),
                automaticallyImplyLeading: false,
                elevation: 0.0,
                toolbarHeight: MediaQuery.of(context).size.height * 0.1,
...
      return continueButton();
    }
  }

  Widget cancelButton() {
    return PlatformIconButton(
      key: Key("wizardCancel"),
      material: (context, platform) => MaterialIconButtonData(),
      icon: Text(LocaleKeys.actions_cancel.tr()),
      onPressed: () {
        Fimber.i("Cancel pressed");

        Navigator.pop(context);
...
    );
  }

  Widget saveButton() {
    final Version? version = getIt<Version>();
    return PlatformIconButton(
        key: Key("wizardSave"),
        material: (context, platform) => MaterialIconButtonData(
              color: Colors.black,
              focusColor: Colors.white,
            ),
        icon: Text(LocaleKeys.actions_save.tr()),
        cupertino: (_, __) => CupertinoIconButtonData(),
...
          });
        });
  }

  Widget continueButton() {
    return PlatformIconButton(
        key: Key("wizardContinue"),
        material: (context, platform) => MaterialIconButtonData(
              color: Colors.black,
              focusColor: Colors.white,
            ),
        icon: Text(LocaleKeys.actions_continue.tr()),
        cupertino: (_, __) => CupertinoIconButtonData(),
...
