...
                      key: Key('DEalogLogoKey'),
                      fit: BoxFit.cover,
                      height: MediaQuery.of(context).size.height * 0.056,
                    ),
                    actions: [
                      PlatformIconButton(
                        key: Key('AppBarButtonSettings'),
                        icon: Icon(PlatformIcons(context).settings),
                        onPressed: () =>
                            Navigator.of(context).pushNamed('/settings'),
                      ),
                    ],
                    leading: PlatformIconButton(
                      key: Key('AppBarWizardButton'),
                      materialIcon: Icon(context.platformIcons.add),
                      cupertinoIcon: Icon(context.platformIcons.add),
                      onPressed: () =>
                          Navigator.of(context).pushNamed('/wizard'),
                    ),
                    elevation: 0.0,
...
