...
  LocationView(this.location, {this.alignment = Alignment.center});

  @override
  Widget build(BuildContext context) {
    Widget locationView;
    if (location.coordinate.isValid) {
      locationView = Row(
        key: Key('locationViewCurrentLocation'),
        children: [
          Icon(
            PlatformIcons(context).location,
          ),
          Text(
            LocaleKeys.settings_current_location.tr(),
...
